--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
-.page-wrap {
-    text-align: center;
-    margin: 0 auto;
-    padding: 1px, 1px, 1px 1px;
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    background-color: #d9d9d9;
+}
 }
 .page-wrap p {
     margin: 0 auto;
@@ -9,13 +11,19 @@
     padding-top: 15px;
 }
 
-section{
-    max-width: 70vw;
+.main-section {
+    max-width: 55vw;
     margin: 0 auto;
     text-align: left;
     justify-content: center;
     display: block;
 }
+.main-section p, li {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    line-height: 1.25;
+}
+
+
 code {
     display: block;
     text-align: left;
@@ -27,10 +35,93 @@ code {
     border-radius: 2px;
     max-width: 40vw;
     width: 30vw;
+    
 }
 
 .keyword-style {
     background: silver;
     font-style: italic;
+    fo
     padding: 0px 5px 0px 4px;
+}
+
+.nav{
+    border-bottom: 1px solid black;
+    box-shadow: 2px 2px lightgray;
+    text-align: left;
+    height: 70px;
+    line-height: 60px;
+    position: fixed;
+}
+.nav li{
+    list-style: none;
+    text-align: left;
+}
+.nav a:hover {
+    color: red;
+}
+label {
+    margin: 0 40px 0 0;
+    font-size: 26px;
+    line-height: 70px;
+    display: none;
+    width: 26px;
+    float: left;
+}
+.menu {
+    margin: 0 30 0 0
+}
+.menu a {
+    text-decoration: none;
+    color: gray;
+    margin: 0 10px;
+    line-height: 70px;
+}
+
+#toggle {
+    display: none;
+}
+
+
+header {
+    font-size: larger;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.ref-list {
+    list-style: none;
+    text-align: left;
+    padding-right: 3vw;
+}
+.ref-list li {
+    text-decoration: none;
+}
+
+
+@media only screen and (max-width: 1000px) {
+    label {
+        display: block;
+        cursor: pointer;
+    }
+    .menu {
+        text-align: center;
+        width: 100%; 
+        display: none;  
+    }
+    .menu a {
+        display: block;
+        text-align: left;
+        border-bottom: 1px solid #eaeaeb;
+        margin: 0;
+    }
+    #toggle:checked + .menu {
+        display: block;
+    }
+    code {
+        font-size: small;
+        width: 25vw;
+        white-space: pre;
+        padding-right: 40vw;
+    }
 }
